# random_word

./: Cargo.toml  README.md  build.rs
benches/: my_benchmark.rs
src/: lang.rs  lib.rs  random.rs  tests.rs  words.rs  words_2to15.rs  words_a_z.rs  words_atoz.rs  words_len_asc.rs
src/br/: de.br  en.br  es.br  fr.br  ja.br  ru.br  zh.br
src/db/: mod.rs
src/license/: ja.txt  ru.txt  zh.txt
src/txt/: en.txt  fr.txt  zh.txt
tests/: mod.rs
