[package]
name = "random_word"
description = "Reliable and efficient functions for generating random words"
version = "0.4.0"
edition = "2021"
authors = ["Mitchell Rhys Hall"]
repository = "https://github.com/MitchellRhysHall/random_word"
license = "MIT"
categories = []
keywords = [
    "random",
    "words",
    "generate",
    "english",
]
readme = "README.md"

[package.metadata.docs.rs]
features = ["en"]

[package.metadata.crates.io]
features = ["en"]

[features]
default = ["de", "en", "es", "fr"]
de = []
en = []
es = []
fr = []

[dependencies]
rand = "0.8.5"
miniz_oxide = "0.7.1"
unicase = "2.6.0"
ahash = "0.8.3"
once_cell = "1.18.0"

[build-dependencies]
rand = "0.8.5"
miniz_oxide = "0.7.1"
unicase = "2.6.0"

[dev-dependencies]
criterion = "0.5.1"


[[bench]]
name = "my_benchmark"
harness = false