[package]
name = "random_word"
description = "Efficient functions for generating random words in many languages."
version = "0.4.0"
edition = "2021"
authors = ["Mitchell Rhys Hall"]
repository = "https://github.com/MitchellRhysHall/random_word"
license = "MIT"
categories = [
    "localization", 
    "internationalization"
]

keywords = [
    "random",
    "words",
    "generate",
    "english",
    "multilingual",
    "dictionary",
    "vocabulary",
    "lexicon"
]

readme = "README.md"

[package.metadata.docs.rs]
features = ["en"]

[package.metadata.crates.io]
features = ["en"]

[features]
de = []
en = []
es = []
fr = []

[dependencies]
unicase = "2.6.0"
once_cell = "1.18.0"
ahash = "0.8.3"
paste = "1.0.5"
miniz_oxide = "0.7.1"
rand = "0.8.5"

[build-dependencies]
unicase = "2.6.0"
miniz_oxide = "0.7.1"

[dev-dependencies]
criterion = "0.5.1"


[[bench]]
name = "my_benchmark"
harness = false