[package]
name = "random_word"
description = "Efficient functions for generating random words in many languages."
version = "0.4.3"
edition = "2021"
authors = ["Mitchell Rhys Hall"]
repository = "https://github.com/MitchellRhysHall/random_word"
license = "MIT"
categories = [
    "algorithms",
    "localization", 
    "internationalization"
]
keywords = [
    "random",
    "words",
    "generate",
    "multilingual",
    "english"
]
exclude = [
    "src/attr/*",
    "src/txt/*",
    "build.rs"
]

readme = "README.md"

[package.metadata.docs.rs]
no-default-features = true

[features]
de = []
en = []
es = []
fr = []
ja = []
zh = []

[dependencies]
once_cell = "1.18.0"
ahash = "0.8.3"
paste = "1.0.5"
brotli = "3.4.0"
rand = "0.8.5"

[build-dependencies]
brotli = "3.4.0"
unicase = "2.6.0"